# ChillPatcher

./: .gitignore  .gitmodules  ChillPatcher.csproj  MyPluginInfo.cs  OneJSBridge.cs  Plugin.cs  PluginConfig.cs  README.md  UIInstance.cs  UIInstanceConfig.cs  UIToolkitInputDispatcher.cs  build_release.bat  deploy.bat  readme_jp.md  release_notes.md
ChillPatcher.Module.Bilibili/: BilibiliModule.cs  ChillPatcher.Module.Bilibili.csproj  README.md
ChillPatcher.Module.QQMusic/: ChillPatcher.Module.QQMusic.csproj  ModuleInfo.cs  QQMusicBridge.cs  QQMusicCoverLoader.cs  QQMusicFavoriteManager.cs  QQMusicModule.cs  QQMusicPcmStreamReader.cs  QQMusicSongRegistry.cs  README.md  SilentPcmReader.cs
ChillPatcher.OneJS/Runtime/Dom/Elements/: BlurPanel.cs  CameraView.cs  Canvas2D.cs
Integration/: GameApiService.cs
JSApi/: ChillConfigApi.cs  ChillGameApi.cs  ChillIMEApi.cs  ChillJSApi.cs  ChillUIApi.cs
NativePlugins/AudioDecoder/: CMakeLists.txt
NativePlugins/AudioDecoder/include/: audio_decoder.h
NativePlugins/AudioDecoder/src/: audio_decoder.cpp
Patches/: KeyboardHookPatch.cs  UIRearrangePatch.cs
Patches/Rime/: RimeEngine.cs
Patches/UIFramework/: AudioPlayer_Update_Patch.cs  MusicTagListUI_Patches.cs  PlayQueuePatch.cs
UIFramework/Audio/: StreamingAudioLoader.cs
UIFramework/Core/: PrefabFactory.cs
qqmusic_bridge/: .gitignore  build.bat  go.mod  go.sum  main.go
qqmusic_bridge/api/: client.go  playlist.go  song.go  user.go
qqmusic_bridge/crypto/: sign.go
qqmusic_bridge/models/: types.go
qqmusic_bridge/stream/: cache.go  pcm_stream.go
ui/default/: global.d.ts  index.tsx
ui/default/@outputs/esbuild/: app.js.map
ui/default/components/: IMECandidatePanel.tsx  IMESettingsPanel.tsx  ModulesPanel.tsx  SettingsPanel.tsx  UIExplorerPanel.tsx
ui/window-manager/: esbuild.mjs  index.tsx  package-lock.json  package.json  tsconfig.json
ui/window-manager/@outputs/esbuild/: app.js  app.js.map
ui/window-manager/@outputs/plugins/camera/: app.js  app.js.map
ui/window-manager/@outputs/plugins/pomodoro/: app.js  app.js.map
ui/window-manager/@outputs/plugins/weather/: app.js  app.js.map
ui/window-manager/components/: Window.tsx
ui/window-manager/plugins/camera/: index.tsx
ui/window-manager/plugins/pomodoro/: index.tsx
ui/window-manager/plugins/weather/: index.tsx
